2. feature 탐색 최종

--- a/src/rdkit/modeling/find_feature1(rdkit_corr_0.3_pIC50).ipynb
+++ b/src/rdkit/modeling/find_feature1(rdkit_corr_0.3_pIC50).ipynb
@@ -11,26 +11,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "258a2bc3-8484-4142-bbfd-e04ea4661770",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: rdkit in c:\\users\\ogong\\anaconda3\\lib\\site-packages (2024.3.5)\n",
-      "Requirement already satisfied: numpy in c:\\users\\ogong\\anaconda3\\lib\\site-packages (from rdkit) (1.26.4)\n",
-      "Requirement already satisfied: Pillow in c:\\users\\ogong\\anaconda3\\lib\\site-packages (from rdkit) (10.3.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install rdkit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "id": "8069fb94-13db-4749-9c92-8f05112ada9b",
    "metadata": {},
    "outputs": [],
@@ -86,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f8b5d593-8c7e-490c-9887-e7eb5eb7473c",
    "metadata": {},
    "outputs": [
@@ -299,20 +279,20 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 학습 ChEMBL 데이터 로드\n",
-    "chembl_data = pd.read_csv('rdkit_train_corr_0.3.csv')  # 예시 파일 이름\n",
+    "chembl_data = pd.read_csv('../rdkit_data/rdkit_train_corr_0.3.csv')  # 예시 파일 이름\n",
     "chembl_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "86449f12-7d8d-4791-96a2-02191e084194",
    "metadata": {},
    "outputs": [],
@@ -335,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2077ff2a-f2ac-48ee-85e6-d67acfa91be2",
    "metadata": {},
    "outputs": [
@@ -343,7 +323,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ogong\\anaconda3\\envs\\dacon\\Lib\\site-packages\\sklearn\\base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "c:\\Users\\ogong\\anaconda3\\envs\\dacon\\Lib\\site-packages\\sklearn\\base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  return fit_method(estimator, *args, **kwargs)\n"
      ]
     },
@@ -760,7 +740,7 @@
        "RandomForestRegressor(random_state=42)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "48792a76-ad4a-4ee3-bc28-57b139717411",
    "metadata": {},
    "outputs": [
@@ -800,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "218741c3-4b33-4c10-9e94-e4838a2c94c3",
    "metadata": {},
    "outputs": [
@@ -826,35 +806,6 @@
       "PEOE_VSA9                  0.031458\n",
       "TPSA                       0.030484\n",
       "HallKierAlpha              0.028509\n",
-      "PEOE_VSA6                  0.026584\n",
-      "SMR_VSA3                   0.025609\n",
-      "BertzCT                    0.024117\n",
-      "Chi0                       0.022848\n",
-      "Kappa1                     0.021119\n",
-      "Kappa3                     0.020323\n",
-      "Chi2v                      0.019874\n",
-      "Chi1n                      0.017825\n",
-      "fr_NH0                     0.016034\n",
-      "fr_pyridine                0.014818\n",
-      "Chi0n                      0.014621\n",
-      "NumRotatableBonds          0.014501\n",
-      "EState_VSA1                0.010841\n",
-      "Kappa2                     0.010668\n",
-      "MolMR                      0.010313\n",
-      "HeavyAtomMolWt             0.010048\n",
-      "PEOE_VSA3                  0.009793\n",
-      "Chi1                       0.009214\n",
-      "Chi0v                      0.007610\n",
-      "NumHAcceptors              0.006797\n",
-      "LabuteASA                  0.006218\n",
-      "MolWt                      0.005559\n",
-      "NumHeteroatoms             0.004517\n",
-      "NOCount                    0.004374\n",
-      "ExactMolWt                 0.004158\n",
-      "NumAromaticCarbocycles     0.003205\n",
-      "fr_benzene                 0.002612\n",
-      "NumValenceElectrons        0.002520\n",
-      "HeavyAtomCount             0.001350\n",
       "dtype: float64\n"
      ]
     }
@@ -867,12 +818,13 @@
     "\n",
     "# 내림차순 정렬을 이용한다\n",
     "top = ser.sort_values(ascending=False)[:]\n",
-    "print(top)"
+    "top10 = ser.sort_values(ascending=False)[:10]\n",
+    "print(top10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "92f559ff-9297-4fd8-9680-b9fb7f6d213c",
    "metadata": {},
    "outputs": [
