모델링리뉴얼

--- a/docs/전략2.md
+++ b/docs/전략2.md
@@ -59,3 +59,89 @@ augmentation 방법?
 self-attention?
 
 mpnns?
+
+---
+멀티모달
+배깅
+부스팅
+앙상블
+
+RF, GB, LightGBM, HGB, EXTRATREE
+
+---
+
+### RNN/LSTM/GRU 모델
+- 분자 구조의 순차적 특성 학습
+- 스마일 문자열을 one-hot 인코딩 또는 임베딩 벡터로 변환후 입력으로 사용
+
+### Transformer 기반 모델
+- seq2seq 모델 학습
+- chembert
+
+```python
+from transformers import BertTokenizer, BertModel
+
+# BERT 모델을 사용하는 예시
+tokenizer = BertTokenizer.from_pretrained("seyonec/PubChem10M_SMILES_BPE_450k")
+model = BertModel.from_pretrained("seyonec/PubChem10M_SMILES_BPE_450k")
+
+smiles = "CCO"  # 예시 SMILES
+inputs = tokenizer(smiles, return_tensors="pt")
+outputs = model(**inputs)
+```
+
+### AutoML
+- H20.ai AutoML, TPOT, Auto-Sklearn : 피처엔지니어링, 하이퍼파라미터튜닝, 모델 선택 자동 수행
+- 데이터셋 입력하면 최적의 머신러닝 모델과 피처 조합을 자동으로 찾아줌
+
+```python
+from tpot import TPOTRegressor
+from sklearn.model_selection import train_test_split
+
+# 예시 데이터 분할
+X_train, X_test, y_train, y_test = train_test_split(traditional_features, y_values, test_size=0.2)
+
+# AutoML 학습
+tpot = TPOTRegressor(generations=5, population_size=20, verbosity=2)
+tpot.fit(X_train, y_train)
+
+# 최적 모델로 예측
+predictions = tpot.predict(X_test)
+```
+
+### 멀테모달학습
+분자 피처와 SMILES 문자열을 결합하여 단일 모델로 학습
+
+•	SMILES 임베딩 + 전통 피처 결합: SMILES 시퀀스를 LSTM, GRU, Transformer 모델로 임베딩한 후 기존 피처와 결합하여 학습합니다.
+•	이를 통해 SMILES와 기존 피처 간의 상호작용을 학습할 수 있습니다.
+
+### 화학전통 프레임워크
+- Chemprop
+- 분자 그래프 데이터를 자동으로 처리하여 화학적 특성을 학습할 수 있는 모델 제공
+
+### Bayesian Optimization 기반 하이퍼파라미터 튜닝
+- Optuna, Hyperopt: 모델의 하이퍼파라미터를 자동으로 최적화하여 성능을 극대화할 수 있습니다.
+
+```python
+import optuna
+from sklearn.ensemble import RandomForestRegressor
+from sklearn.metrics import mean_squared_error
+
+def objective(trial):
+    n_estimators = trial.suggest_int("n_estimators", 10, 200)
+    max_depth = trial.suggest_int("max_depth", 2, 32)
+    
+    model = RandomForestRegressor(n_estimators=n_estimators, max_depth=max_depth)
+    model.fit(X_train, y_train)
+    y_pred = model.predict(X_test)
+    
+    return mean_squared_error(y_test, y_pred)
+
+study = optuna.create_study(direction="minimize")
+study.optimize(objective, n_trials=100)
+```
+
+
+### MLP
+MLP(Multi-Layer Perceptron)는 다층 퍼셉트론으로, 피처 기반 데이터를 학습하는 기본적인 신경망 모델입니다. 머신러닝에서 전통적인 선형 회귀나 결정 트리 모델과 달리, 비선형 관계를 학습할 수 있어 복잡한 데이터 구조를 효과적으로 모델링할 수 있습니다. MLP를 활용한 모델링은 주어진 피처 벡터를 입력으로 받아 이를 예측 값으로 변환하는 방식으로, 다양한 문제에서 사용됩니다.
+
